Added videoplayer page

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Kamalakannan Chennappan",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "express": "^4.15.3",
     "hbs": "^4.0.1"
   }
