--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "axios": "^0.16.2",
     "express": "^4.15.3",
-    "hbs": "^4.0.1",
-    "slick-carousel": "^1.6.0"
+    "hbs": "^4.0.1"
   }
 }
