--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha **/*.test.js",
+    "test-watch": "nodemon --exec \"npm test\"",
     "start": "node app.js"
   },
   "author": "Kamalakannan Chennappan",
@@ -13,5 +14,8 @@
     "axios": "^0.16.2",
     "express": "^4.15.3",
     "hbs": "^4.0.1"
+  },
+  "devDependencies": {
+    "supertest": "^3.0.0"
   }
 }
